<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">WhatsFrolf</string>
    <string name="main_menu">Main Menu</string>
    <string name="save">Save</string>
    <string name="par">Par</string>
    <string name="confirm">Confirm</string>
    <string name="courses">Courses</string>
    <string name="course_name">Course Name</string>
    <string name="create">Create</string>
    <string name="create_account">Create Account</string>
    <string name="account">Account</string>
    <string name="player_name">Player Name</string>
    <string name="game_name">Game Name</string>
    <string name="games">Games</string>
    <string name="course">Course</string>
    <string name="hole">Hole</string>
    <string name="holes_colon">Holes:</string>
    <string name="par_colon">Par:</string>
    <string name="course_colon">Course:</string>
    <string name="group_colon">Group:</string>
    <string name="players_colon">Players:</string>
    <string name="hole_colon">Hole:</string>
    <string name="previous">Prev</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="player">Player</string>
    <string name="strokes">Strokes</string>
    <string name="finish">Finish</string>
    <string name="score_game">Score Game</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_name">Login Name</string>
    <string name="new_game">New Game</string>
    <string name="new_course">New Course</string>
    <string name="resume_game">Resume Game</string>
    <string name="leave_group">Leave Group</string>
    <string name="statistics">Statistics</string>
    <string name="manage_friends">Manage Friends</string>
    <string name="manage_courses">Manage Courses</string>
    <string name="manage_groups">Manage Groups</string>
    <string name="game_results">Game Results</string>
    <string name="groups">Groups</string>
    <string name="invites">Invites</string>
    <string name="invited_by">Invited by:</string>
    <string name="handle">Handle</string>
    <string name="help_app">Help</string>
    <string name="help_1">1. Add player(s)</string>
    <string name="help_2">2. Add a course</string>
    <string name="help_3">3. Start a new game</string>
    <string name="help_4">4. Score the game</string>
    <string name="holes">Holes</string>
    <string name="score">Score</string>
    <string name="holes_lbl">Holes:</string>
    <string name="par_lbl">Par:</string>
    <string name="start_game">Start Game</string>
    <string name="add_player">Add Player</string>
    <string name="add_course">Add Course</string>
    <string name="add_group">Add Group</string>
    <string name="new_group">New Group</string>
    <string name="num_of_holes"># Of Holes</string>
    <string name="friend_code">Friend code</string>
    <string name="add_friend">Add friend</string>
    <string name="name">Name</string>
    <string name="watch_game">Watch Game</string>
    <string name="plus_symbol">+</string>
    <string name="minus_symbol">-</string>
    <string name="tee">Tee</string>
    <string name="adjust_par">Adjust Par</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="share">Share</string>
    <string name="card">Card</string>
    <string name="refresh">Refresh</string>

    <!-- Confirm Messages -->
    <string name="remove_player_confirm">Are you sure you want to remove this player? The player\'s group data cannot be recovered.</string>
    <string name="complete_game_confirm">Are you sure you want to complete this game? Once completed the game cannot be modified.</string>
    <string name="leave_group_confirm">Are you sure you want to leave the group? Your group data cannot be recovered.</string>

    <!-- Toast Messages -->
    <string name="login_failed_msg">Failed to login. The username and/or password may be incorrect.</string>

    <string name="group_member_removed_success_msg">Group member removed.</string>
    <string name="group_member_removed_failure_msg">Group member unable to be removed.</string>

    <string name="group_left_success_msg">Group left.</string>
    <string name="group_left_failure_msg">Failed to leave group.</string>

    <string name="invite_sent_success_msg">Invite sent.</string>
    <string name="invite_sent_failure_msg">Invite failed to send.</string>

    <string name="invite_accepted_success_msg">Invite accepted.</string>
    <string name="invite_accepted_failure_msg">Invite failed to be accepted.</string>

    <string name="invite_decline_success_msg">Invite declined.</string>
    <string name="invite_decline_failure_msg">Invite failed to be declined.</string>

    <string name="game_created_success_msg">Game created.</string>
    <string name="game_created_failure_msg">Game failed to be created.</string>

    <string name="create_account_success_msg">Account created.</string>
    <string name="create_account_failure_msg">Account failed to be created.</string>

    <string name="update_account_success_msg">Account updated.</string>
    <string name="update_account_failure_msg">Account failed to update.</string>

    <string name="game_complete_success_msg">Game completed.</string>
    <string name="game_complete_failure_msg">Game failed to complete.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_frolf_group_record">FrolfGroupRecordActivity</string>
</resources>
