<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background_gray"
    tools:context=".ui.activities.MainMenuActivity">

    <!-- New Game navigation button -->
    <Button
        android:id="@+id/new_game"
        android:textColor="@color/white"
        android:background="@color/button_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:text="@string/new_game"
        android:onClick="onClickNewGame"/>

    <!-- Resume Game navigation button -->
    <Button
        android:id="@+id/resume_game"
        android:textColor="@color/white"
        android:background="@color/button_green"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_game"
        android:text="@string/resume_game"
        android:onClick="onClickResumeGame" />

    <!-- Statistics navigation button -->
    <Button
        android:id="@+id/statistics"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:background="@color/button_green"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/resume_game"
        android:text="@string/statistics"
        android:onClick="onClickStats" />

    <!-- Manage Courses navigation button -->
    <Button
        android:id="@+id/manage_groups"
        android:textColor="@color/white"
        android:background="@color/button_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/statistics"
        android:text="@string/manage_groups"
        android:layout_marginBottom="20dp"
        android:onClick="onClickManageFrolfGroups"/>

    <!-- Manage Players button -->
    <Button
        android:id="@+id/manage_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@color/button_green"
        android:layout_below="@+id/manage_groups"
        android:text="@string/manage_friends"
        android:layout_marginBottom="20dp"
        android:onClick="onClickManageFriends"/>

    <!-- Help button -->
    <Button
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@color/button_green"
        android:layout_below="@+id/manage_players"
        android:text="@string/help_app"
        android:layout_marginBottom="20dp"
        android:onClick="onClickHelp"/>

</RelativeLayout>
