<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="createAccountVm"
            type="robert.purdey.caddytracker.ui.viewmodels.CreateAccountViewModel" />
    </data>

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_create_account"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/background_gray"
        tools:context="robert.purdey.caddytracker.ui.activities.CreateAccountActivity">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="top"
            android:orientation="vertical">

            <!-- Username text input -->
            <EditText
                android:id="@+id/etxt_activity_create_account_loginname"
                android:inputType="text"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@android:color/white"
                android:hint="@string/login_name"
                android:paddingLeft="10dp"
                android:maxLines="1"
                android:text="@={createAccountVm.loginName}"/>

            <!-- Handle text input -->
            <EditText
                android:id="@+id/etxt_activity_create_account_handle"
                android:inputType="text"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@android:color/white"
                android:hint="@string/handle"
                android:paddingLeft="10dp"
                android:maxLines="1"
                android:text="@={createAccountVm.handle}"/>


            <!-- Password text input -->
            <EditText
                android:id="@+id/etxt_activity_create_account_password"
                android:inputType="textPassword"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/etxt_activity_create_account_handle"
                android:layout_margin="5dp"
                android:background="@android:color/white"
                android:hint="@string/password"
                android:paddingLeft="10dp"
                android:maxLines="1"
                android:text="@={createAccountVm.password}"/>

            <!-- Confirm text input -->
            <EditText
                android:id="@+id/etxt_activity_create_account_confirm_password"
                android:inputType="textPassword"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/etxt_activity_create_account_password"
                android:layout_margin="5dp"
                android:background="@android:color/white"
                android:hint="@string/confirm"
                android:paddingLeft="10dp"
                android:maxLines="1"
                android:text="@={createAccountVm.confirmPassword}"/>

            <!-- Create account button -->
            <Button
                android:id="@+id/bttn_activity_create_account_create"
                android:textColor="@color/white"
                android:background="@color/button_green"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/s"
                android:layout_margin="5dp"
                android:text="@string/create_account"
                android:onClick="onCreateAccount"/>

        </LinearLayout>

    </RelativeLayout>

</layout>
