<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="accountViewModel"
            type="robert.purdey.caddytracker.ui.viewmodels.AccountViewModel" />
    </data>

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_account"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/background_gray"
        tools:context="robert.purdey.caddytracker.ui.activities.AccountActivity">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="top"
            android:orientation="vertical">

            <!-- Username text input -->
            <EditText
                android:id="@+id/etxt_activity_account_loginname"
                android:inputType="text"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@android:color/white"
                android:hint="@string/login_name"
                android:paddingLeft="10dp"
                android:maxLines="1"
                android:text="@={accountViewModel.loginName}"/>

            <!-- Handle text input -->
            <EditText
                android:id="@+id/etxt_activity_account_handle"
                android:inputType="text"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@android:color/white"
                android:hint="@string/handle"
                android:paddingLeft="10dp"
                android:maxLines="1"
                android:text="@={accountViewModel.handle}"/>

            <!-- friendCode text input -->
            <EditText
                android:id="@+id/etxt_activity_account_friend_code"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@android:color/white"
                android:hint="@string/friend_code"
                android:paddingLeft="10dp"
                android:maxLines="1"
                android:clickable="false"
                android:text="@={accountViewModel.friendCode}" />

            <!-- Save account button -->
            <Button
                android:id="@+id/bttn_activity_account_save"
                android:textColor="@color/white"
                android:background="@color/button_green"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/s"
                android:layout_margin="5dp"
                android:text="@string/save"
                android:onClick="onSave"/>

        </LinearLayout>

    </RelativeLayout>

</layout>