<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_games_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background_gray"
    tools:context=".ui.activities.GamesMenuActivity">

    <!-- New Game navigation button -->
    <Button
        android:id="@+id/bttn_activity_games_menu_new_game"
        android:textColor="@color/white"
        android:background="@color/button_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:text="@string/new_game"
        android:onClick="onClickNewGame" />

    <!-- Resume Game navigation button -->
    <Button
        android:id="@+id/bttn_activity_games_menu_resume_game"
        android:textColor="@color/white"
        android:background="@color/button_green"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bttn_activity_games_menu_new_game"
        android:text="@string/resume_game"
        android:onClick="onClickResumeGame" />

    <!-- Game results navigation button -->
    <!-- <Button
        android:id="@+id/new_game_watch"
        android:textColor="@color/white"
        android:background="@color/button_green"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bttn_activity_games_menu_resume_game"
        android:text="@string/watch_game"
        android:onClick="onClickWatchGameRequest" /> -->

    <!-- Game results navigation button -->
    <Button
        android:id="@+id/game_results"
        android:textColor="@color/white"
        android:background="@color/button_green"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bttn_activity_games_menu_resume_game"
        android:text="@string/game_results"
        android:onClick="onClickGameResults" />

</RelativeLayout>
